Add HTML structure, background image, banner texts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     </head>
 
     <body>
+        <div class="main-container">
+            <div class="image-container">
+                <div class="banner-container">
+                    <img src="./assets/images/odin-icon.png" alt="odin-icon">
+                    <h1>ODIN</h1>
+                </div>
+                <div class="image-credit-container">
+                    <h3>Photo by Halie West on Unsplash</h3>
+                </div>
+            </div>
 
+            <div class="text-container">
+                <div>hello</div>
+            </div>
+        </div>
     </body>
 
 </html>
