Add temporary sign-up section

--- a/index.html
+++ b/index.html
@@ -13,15 +13,51 @@
             <div class="image-container">
                 <div class="banner-container">
                     <img src="./assets/images/odin-icon.png" alt="odin-icon">
-                    <h1>ODIN</h1>
+                    <span class="banner-text">ODIN</span>
                 </div>
                 <div class="image-credit-container">
-                    <h3>Photo by Halie West on Unsplash</h3>
+                    <h3 class="image-credit-text">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></h3>
                 </div>
             </div>
 
-            <div class="text-container">
-                <div>hello</div>
+            <div class="sign-up-container">
+                <div class="text-top-container">
+                    <p>
+                        This is not a real online service! You know you need something 
+                        like this in your life to help you realize your deepest dreams. 
+                        Sign up <em>now</em> to get started.
+                        <br>
+                        <br>
+                        You <em>know</em> you want to.
+                    </p>
+                </div>
+
+                <div class="form-container">
+                    <h1>Let's do this!</h1>
+                    <form method="post">
+                        <div style="display:block;">
+                            <label for="first-name">First name</label>
+                            <input id="first-name" name="first-name" type="text">
+
+                            <label for="first-name">First name</label>
+                            <input id="first-name" name="first-name" type="text">
+                        </div>
+
+                        <div style="display:block;">
+                            <label for="first-name">First name</label>
+                            <input id="first-name" name="first-name" type="text">
+
+                            <label for="first-name">First name</label>
+                            <input id="first-name" name="first-name" type="text">
+                        </div>
+
+                        <label for="first-name">First name</label>
+                        <input id="first-name" name="first-name" type="text">
+
+                        <label for="first-name">First name</label>
+                        <input id="first-name" name="first-name" type="text">
+                    </form>
+                </div>
             </div>
         </div>
     </body>
