Add create account section

--- a/index.html
+++ b/index.html
@@ -35,28 +35,43 @@
                 <div class="form-container">
                     <h1>Let's do this!</h1>
                     <form method="post">
-                        <div style="display:block;">
-                            <label for="first-name">First name</label>
-                            <input id="first-name" name="first-name" type="text">
+                        <div class="form-details">
+                            <div class="form-user-input">
+                                <label for="first-name">FIRST NAME</label>
+                                <input id="first-name" name="first-name" type="text">
+                            </div>
 
-                            <label for="first-name">First name</label>
-                            <input id="first-name" name="first-name" type="text">
+                            <div class="form-user-input">
+                                <label for="last-name">LAST NAME</label>
+                                <input id="last-name" name="last-name" type="text">
+                            </div>
+
+                            <div class="form-user-input">
+                                <label for="email">EMAIL</label>
+                                <input id="email" name="email" type="email">
+                            </div>
+
+                            <div class="form-user-input">
+                                <label for="phone-number">PHONE NUMBER</label>
+                                <input id="phone-number" name="phone-number" type="number">
+                            </div>
+
+                            <div class="form-user-input">
+                                <label for="password">PASSWORD</label>
+                                <input id="password" name="password" type="password">
+                            </div>
+
+                            <div class="form-user-input">
+                                <label for="password-confirm">CONFIRM PASSWORD</label>
+                                <input id="password-confirm" name="password-confirm" type="password">
+                            </div>
                         </div>
-
-                        <div style="display:block;">
-                            <label for="first-name">First name</label>
-                            <input id="first-name" name="first-name" type="text">
-
-                            <label for="first-name">First name</label>
-                            <input id="first-name" name="first-name" type="text">
-                        </div>
-
-                        <label for="first-name">First name</label>
-                        <input id="first-name" name="first-name" type="text">
-
-                        <label for="first-name">First name</label>
-                        <input id="first-name" name="first-name" type="text">
                     </form>
+                </div>
+
+                <div class="text-bottom-container">
+                    <button type="submit">Create Account</button>
+                    <p>Already have an account? <a href="#">Log in</a></p>
                 </div>
             </div>
         </div>
