--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                             <div class="form-user-input">
                                 <label for="email">EMAIL</label>
-                                <input id="email" name="email" type="email">
+                                <input id="email" name="email" type="email" spellcheck="false">
                             </div>
 
                             <div class="form-user-input">
@@ -58,12 +58,12 @@
 
                             <div class="form-user-input">
                                 <label for="password">PASSWORD</label>
-                                <input id="password" name="password" type="password">
+                                <input id="password" name="password" type="password" required spellcheck="false">
                             </div>
 
                             <div class="form-user-input">
                                 <label for="password-confirm">CONFIRM PASSWORD</label>
-                                <input id="password-confirm" name="password-confirm" type="password">
+                                <input id="password-confirm" name="password-confirm" type="password" required spellcheck="false">
                             </div>
                         </div>
                     </form>
